# distill_cli

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements.txt  run.md  setup.py
distill_cli/: cli.py  main.py
distill_cli/core/: distillers.py  model_loader.py
distill_cli/data/: dataset.py
distillation_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_config_parser.py  test_model_loader.py
tests/integrations/: test_pytorch_integration.py  test_tensorflow_integration.py
tests/units/: test_dataset.py  test_distillation.py  test_models.py
